# RoamingSnail

./: CMakeLists.txt  RCa21332  README.md  appicon.rc  vcpkg.json
assets/models/shell/: shell.mtl  shell.mtl.bak  shell.obj.bak
assets/models/snail/: slug_body.mtl  slug_body.mtl.bak  slug_body.obj.bak
assets/models/vegetation/: dry_bush_clump.mtl  dry_bush_clump.mtl.bak  dry_bush_clump.obj.bak
src/: Config.hpp  Logger.hpp
src/core/: App.cpp  App.hpp  Environment.cpp  Environment.hpp  Loader.cpp  Material.cpp  Object.cpp  Object.hpp  Texture.cpp  World.cpp
src/gameplay/: GameRules.cpp  GameState.hpp
src/interface/: Camera.cpp  Camera.hpp  Menu.cpp  Menu.hpp  TextRenderer.cpp  Window.cpp
src/objects/: Ball.cpp  Ball.hpp
src/player/: Snail.cpp  Snail.hpp
src/rendering/: SceneLighting.cpp  SceneLighting.hpp
src/shaders/: Depth.fragmentshader  Depth.vertexshader  hdr_background.fragmentshader  hdr_background.vertexshader  screen.fragmentshader  shader.fragmentshader  terrain.fragmentshader  terrain.vertexshader
src/world/: Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp  Vegetation.cpp  Vegetation.hpp
